Remove fork button on mobile device - Fix #4

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -144,4 +144,8 @@
       display: block;
     }
   }
+
+  .forkme {
+    display: none;
+  }
 }
